--- a/class01/class01/templates/base.html
+++ b/class01/class01/templates/base.html
@@ -16,53 +16,58 @@
 <body class="leading-normal tracking-normal bg-slate-50 dark:bg-slate-800 font-poppins">
     
   <nav class="sticky top-0 z-20 w-full border-b border-gray-600 bg-gray-50 dark:bg-gray-900 start-0">
-    <div class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto">
-    <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src={% static 'img/logo.png' %} class="h-10" alt="Flowbite Logo">
-        <span class="self-center text-2xl font-semibold text-gray-900 whitespace-nowrap dark:text-white">Class<span class="text-blue-600">01</span></span>
-    </a>
-    <div class="flex space-x-3 md:order-2 md:space-x-0 rtl:space-x-reverse">
-      {% if request.path == '/' or request.path == '/all-topics/' %}  
-        <a href="{% url 'exibir_topico' 1 %}"><button type="button" class="px-4 py-2 text-sm font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Comece agora</button></a>
-      {% elif next_topic %}
-        <a href="{% url 'exibir_topico' next_topic.id %}"><button type="button" class="px-4 py-2 text-sm font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Próximo tópico</button></a>
-      {% endif %}
-        <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center justify-center w-10 h-10 p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
-          <span class="sr-only">Open main menu</span>
-          <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+    <!-- DIV de todos elementos do navbar -->
+    <div class="flex flex-wrap items-center justify-around max-w-screen-xl p-4 mx-auto">
+      <!-- Logo Class01 -->
+      <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
+          <img src={% static 'img/logo.png' %} class="h-10" alt="Class01 Logo">
+          <span class="self-center text-2xl font-semibold text-gray-900 whitespace-nowrap dark:text-white">Class<span class="text-blue-600">01</span></span>
+      </a>
+      <!-- Botão de menu mobile -->
+      <div class="flex space-x-3 md:order-2 xs:order-3 md:space-x-0 rtl:space-x-reverse">
+          <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center justify-center w-10 h-10 p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
+            <span class="sr-only">Open main menu</span>
+            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+            </svg>
+        </button>
+      </div>
+      <!-- Botão de tema -->
+      <div class="md:order-3">
+        <button id="theme-toggle"
+          class="w-12 h-12 p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+          <svg class="block fill-violet-700 dark:hidden" fill="currentColor" viewBox="0 0 20 20">
+              <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
           </svg>
-      </button>
-    </div>
-    <div class="md:order-3">
-      <button id="theme-toggle"
-        class="w-12 h-12 p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
-        <svg class="block fill-violet-700 dark:hidden" fill="currentColor" viewBox="0 0 20 20">
-            <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
-        </svg>
-        <svg class="hidden fill-yellow-500 dark:block" fill="currentColor" viewBox="0 0 20 20">
-            <path
-                d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
-                fill-rule="evenodd" clip-rule="evenodd"></path>
-        </svg>
-      </button>
-    </div>
-    <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-      <ul class="flex flex-col p-4 mt-4 font-medium border rounded-lg md:p-0 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 dark:border-gray-700">
-        <li>
-          <a href="/#section1" class="block px-3 py-2 text-gray-900 rounded dark:text-white nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-600 md:dark:hover:bg-transparent dark:border-gray-700">Home</a>
-        </li>
-        <li>
-          <a href="/#section2" class="block px-3 py-2 text-gray-900 rounded dark:text-white nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-600 md:dark:hover:bg-transparent dark:border-gray-700">Topics</a>
-        </li>
-        <li>
-          <a href="/#section3" class="block px-3 py-2 text-gray-900 rounded dark:text-white nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-600 md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
-        </li>
-        <li>
-          <a href="/#section4" class="block px-3 py-2 text-gray-900 rounded dark:text-white nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-600 md:dark:hover:bg-transparent dark:border-gray-700">About</a>
-        </li>
-      </ul>
-    </div>
+          <svg class="hidden fill-yellow-500 dark:block" fill="currentColor" viewBox="0 0 20 20">
+              <path
+                  d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
+                  fill-rule="evenodd" clip-rule="evenodd"></path>
+          </svg>
+        </button>
+      </div>
+      <!-- DIV de todos os links do navbar -->
+      <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
+        <ul class="flex flex-col items-center p-4 mt-4 font-medium border rounded-lg md:p-0 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 dark:border-gray-700">
+          <li>
+            <a href="/#section1" class="block px-3 py-2 text-gray-900 rounded dark:text-white nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-600 md:dark:hover:bg-transparent dark:border-gray-700">Home</a>
+          </li>
+          <li>
+            <a href="/#section2" class="block px-3 py-2 text-gray-900 rounded dark:text-white nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-600 md:dark:hover:bg-transparent dark:border-gray-700">Topics</a>
+          </li>
+          <li>
+            <a href="/#section3" class="block px-3 py-2 text-gray-900 rounded dark:text-white nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-600 md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
+          </li>
+          <li>
+            <a href="/#section4" class="block px-3 py-2 text-gray-900 rounded dark:text-white nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-600 md:dark:hover:bg-transparent dark:border-gray-700">About</a>
+          </li>
+          {% if request.path == '/' or request.path == '/all-topics/' %}  
+            <a href="{% url 'exibir_topico' 1 %}"><button type="button" class="px-4 py-2 mx-auto text-sm font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Comece agora</button></a>
+          {% elif next_topic %}
+            <a href="{% url 'exibir_topico' next_topic.id %}"><button type="button" class="px-4 py-2 mx-auto text-sm font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Próximo tópico</button></a>
+          {% endif %}
+        </ul>
+      </div>
     </div>
   </nav>
 
