--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -21,7 +21,7 @@
                             <span class="my-auto ml-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M15.042 21.672 13.684 16.6m0 0-2.51 2.225.569-9.47 5.227 7.917-3.286-.672ZM12 2.25V4.5m5.834.166-1.591 1.591M20.25 10.5H18M7.757 14.743l-1.59 1.59M6 10.5H3.75m4.007-4.243-1.59-1.59" />
-                                  </svg>                                  
+                                </svg>                                  
                             </span>
                         </button>
                     </a>
@@ -190,21 +190,33 @@
                             <p class="text-gray-600 dark:text-gray-200 md:text-xl">Learn more about our mission and values.</p>
                             <div class="space-y-4">
                                 <div class="flex items-start gap-4">
-                                    <img class="w-6 h-6 text-gray-600 dark:text-gray-200" src="{% static 'img/book-svgrepo-com.png' %}" alt="">
+                                    <div class="w-6 h-6 text-gray-600 dark:text-gray-200">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.042A8.967 8.967 0 0 0 6 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 0 1 6 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 0 1 6-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0 0 18 18a8.967 8.967 0 0 0-6 2.292m0-14.25v14.25" />
+                                        </svg>    
+                                    </div>
                                     <div>
                                         <h4 class="font-semibold text-gray-600 dark:text-gray-200">Our Mission</h4>
                                         <p class="text-gray-600 dark:text-gray-200">To provide high-quality educational resources and support for learners of all levels.</p>
                                     </div>
                                 </div>
                                 <div class="flex items-start gap-4">
-                                    <img class="w-6 h-6 text-gray-600 dark:text-gray-200" src="{% static 'img/lamp-svgrepo-com.png' %}" alt="">
+                                    <div class="w-6 h-6 text-gray-600 dark:text-gray-200">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 18v-5.25m0 0a6.01 6.01 0 0 0 1.5-.189m-1.5.189a6.01 6.01 0 0 1-1.5-.189m3.75 7.478a12.06 12.06 0 0 1-4.5 0m3.75 2.383a14.406 14.406 0 0 1-3 0M14.25 18v-.192c0-.983.658-1.823 1.508-2.316a7.5 7.5 0 1 0-7.517 0c.85.493 1.509 1.333 1.509 2.316V18" />
+                                        </svg>  
+                                    </div>
                                     <div>
                                         <h4 class="font-semibold text-gray-600 dark:text-gray-200">Our Values</h4>
                                         <p class="text-gray-600 dark:text-gray-200">Commitment to excellence, innovation, and accessibility.</p>
                                     </div>
                                 </div>
                                 <div class="flex items-start gap-4">
-                                    <img class="w-6 h-6 text-gray-600 dark:text-gray-200" src="{% static 'img/team-svgrepo-com.png' %}" alt="">
+                                    <div class="w-6 h-6 text-gray-600 dark:text-gray-200">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M18 18.72a9.094 9.094 0 0 0 3.741-.479 3 3 0 0 0-4.682-2.72m.94 3.198.001.031c0 .225-.012.447-.037.666A11.944 11.944 0 0 1 12 21c-2.17 0-4.207-.576-5.963-1.584A6.062 6.062 0 0 1 6 18.719m12 0a5.971 5.971 0 0 0-.941-3.197m0 0A5.995 5.995 0 0 0 12 12.75a5.995 5.995 0 0 0-5.058 2.772m0 0a3 3 0 0 0-4.681 2.72 8.986 8.986 0 0 0 3.74.477m.94-3.197a5.971 5.971 0 0 0-.94 3.197M15 6.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm6 3a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Zm-13.5 0a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Z" />
+                                        </svg>                                                                                    
+                                    </div>
                                     <div>
                                         <h4 class="font-semibold text-gray-600 dark:text-gray-200">Our Team</h4>
                                         <p class="text-gray-600 dark:text-gray-200">A dedicated group of educators</p>
