--- a/class01/class01/templates/base.html
+++ b/class01/class01/templates/base.html
@@ -93,10 +93,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+<script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
 <script src="{% static 'js/theme.js' %}"></script>
 <script src="{% static 'js/animation.js' %}"></script>
 <script src="{% static 'js/chatbot.js' %}"></script>
+<script src="{% static 'js/typing.js' %}"></script>
 
 <div vw class="enabled">
   <div vw-access-button class="active"></div>
