--- a/class01/home/templates/all_topics.html
+++ b/class01/home/templates/all_topics.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base-2nd.html' %}
 {% load static tailwind_tags %}
 <html lang="en">
 <head>
@@ -8,8 +8,37 @@
     
     {% block content %}
 
-    <div class="flex w-full h-16">
+    <div class="block w-full h-16 mb-6 text-center md:mb-0">
         <h2 class="mx-auto my-auto text-4xl text-gray-900 dark:text-white">Todos os tópicos disponíveis</h2>
+    </div>
+
+    <div class="flex flex-row items-center w-full">
+        <form method="get" class="flex flex-row flex-wrap items-center justify-center w-full">
+            {% csrf_token %}
+    
+            <div class="flex flex-row flex-wrap my-auto gap-x-2">
+                <div class="my-auto mb-4 text-gray-800">
+                    {{ form_topic.categoria }}
+                </div>
+                <div class="my-auto mb-4 text-gray-800">
+                    {{ form_topic.nivel_experiencia }}
+                </div>
+                <div class="my-auto mb-4 text-gray-800">
+                    {{ form_topic.funcao }}
+                </div>
+                <div class="my-auto mb-4 text-gray-800">
+                    {{ form_topic.ordenar_por }}
+                </div>
+            </div>
+            <div class="flex mb-3.5 ml-2">
+                <button type="submit" class="inline-flex items-center px-5 py-2 text-sm font-medium text-center text-blue-600 transition duration-100 bg-white border border-blue-600 rounded-lg hover:text-white dark:text-white hover:bg-blue-600 me-2 dark:bg-blue-600 dark:hover:bg-blue-700">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+                        <path fill-rule="evenodd" d="M3.792 2.938A49.069 49.069 0 0 1 12 2.25c2.797 0 5.54.236 8.209.688a1.857 1.857 0 0 1 1.541 1.836v1.044a3 3 0 0 1-.879 2.121l-6.182 6.182a1.5 1.5 0 0 0-.439 1.061v2.927a3 3 0 0 1-1.658 2.684l-1.757.878A.75.75 0 0 1 9.75 21v-5.818a1.5 1.5 0 0 0-.44-1.06L3.13 7.938a3 3 0 0 1-.879-2.121V4.774c0-.897.64-1.683 1.542-1.836Z" clip-rule="evenodd" />
+                    </svg>
+                    Aplicar filtros
+                </button>
+            </div>
+        </form>
     </div>
 
     <div class="flex w-full mx-auto my-10">
